# loganalyser

./: .gitignore  Cargo.toml  Dockerfile  FILEWATCHER.md  Makefile  compose.yml  create_events.sql  dockerfix.sh  events.db  gateway_config.toml  load_test.log.keep  load_test.py  loganalyser.md  mysql_test_config.toml  next_steps.md  required_fixes.md  rustfmt.toml  test_config.toml
event_storage/: Cargo.toml
event_storage/src/: config.rs  event_filter.rs  lib.rs  memory.rs  mysql.rs  pending.rs  sql.rs  sqlite.rs
file_watcher/: Cargo.toml
file_watcher/src/: alert.rs  config.rs  file_watcher.rs  lib.rs  main.rs  state.rs
file_watcher/tests/: acceptance.rs  basic_config.json  basic_config.toml  basic_config.yaml  basic_tests.rs
file_watcher/tests/useful/: mod.rs
log_exporter/: Cargo.toml
log_exporter/src/: main.rs
log_parser/: Cargo.toml
log_parser/src/: error.rs  event.rs  lib.rs  parser.rs  pending_span.rs
log_parser/src/parser/: build.rs  mod.rs  single.rs  span.rs
log_storage/: Cargo.toml
log_storage/src/: lib.rs
log_viewer/: Cargo.toml
log_viewer/src/: app.rs  config.rs  main.rs
mysql-init/: init.sql
shared/: Cargo.toml
shared/src/: alert.rs  env.rs  event.rs  event_filter.rs  lib.rs  tree.rs
web/: Cargo.toml
web/src/: main.rs
web/src/routes/: charts.rs  events.rs  index.rs  mod.rs  searches.rs  spans.rs  tail.rs
web/templates/: base.html  charts.html  events.html  events_detail.html  events_more.html  events_results.html  index.html  searches.html  spans.html  spans_waterfall.html  tail.html
