[package]
name = "event_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
thiserror = "2"
sqlx = { version = "0.8.6", features = ["mysql", "sqlite", "runtime-tokio-rustls", "chrono"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rstest = "0.26.1"
tokio = { version = "1.50.0", features = ["rt", "macros"] }
