[package]
name = "file_watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
log_parser = { path = "../log_parser" }
shared = { path = "../shared" }
event_storage = { path = "../event_storage" }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.50.0", features = ["fs", "macros", "rt-multi-thread", "time", "io-util", "signal"] }
toml = "1.0.6"
anyhow = "1.0.102"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
glob = "0.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
tempfile = "3.27.0"
